--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,71 +12,63 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-    - name: Setup Java 17
-      uses: actions/setup-java@v4
+    - uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
 
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@v4
+    - uses: gradle/actions/setup-gradle@v4
+      with:
+        gradle-version: '8.8'
 
-    - name: Grant execute permission
-      run: chmod +x gradlew
+    - name: Generate Gradle Wrapper
+      run: gradle wrapper --gradle-version 8.8
 
-    - name: Build with Gradle
-      run: ./gradlew build --no-daemon --stacktrace
+    - name: Build
+      run: chmod +x gradlew && ./gradlew build --no-daemon --stacktrace
 
-    - name: List built files
+    - name: Copy JAR
       run: |
-        echo "=== build/libs ==="
-        ls -la build/libs/ || echo "No build/libs"
-
-    - name: Copy JAR to root
-      run: |
-        # Find the main jar (not sources, not dev)
         JAR=$(find build/libs -name "*.jar" ! -name "*-sources.jar" ! -name "*-dev.jar" | head -1)
-        if [ -n "$JAR" ]; then
-          cp "$JAR" ./AlpineVisuals-1.0.0.jar
-          echo "Copied $JAR"
-        else
-          echo "No JAR found!"
-          exit 1
-        fi
+        cp "$JAR" ./AlpineVisuals-2.0.0.jar
 
-    - name: Commit JAR to repo
+    - name: Commit JAR
       run: |
         git config user.name "GitHub Actions"
         git config user.email "actions@github.com"
-        git add -f AlpineVisuals-1.0.0.jar
-        git diff --staged --quiet || git commit -m "Auto-build: Add compiled JAR"
+        git add -f AlpineVisuals-2.0.0.jar
+        git diff --staged --quiet || git commit -m "Auto-build: Alpine Visuals v2.0.0"
         git push || true
 
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v4
+    - uses: actions/upload-artifact@v4
       with:
-        name: AlpineVisuals-mod
+        name: AlpineVisuals
         path: build/libs/*.jar
 
-    - name: Create Release
-      uses: softprops/action-gh-release@v2
+    - uses: softprops/action-gh-release@v2
       with:
-        tag_name: v1.0.0-${{ github.run_number }}
-        name: Alpine Visuals v1.0.0 Build ${{ github.run_number }}
+        tag_name: v2.0.0-build${{ github.run_number }}
+        name: Alpine Visuals v2.0.0 (Build ${{ github.run_number }})
         body: |
-          ## Alpine Visuals v1.0.0
-          Visual mod for Minecraft 1.20.1 (Fabric)
+          ## Alpine Visuals v2.0.0 - Ultimate Visual Suite
+          
+          **37 visual modules** inspired by Pulse, Luminar, Soup API
+          
+          ### Categories:
+          - **Render** (10): Fullbright, Custom Crosshair, Glow ESP, Name Tags, Trail Renderer, etc.
+          - **HUD** (10): FPS/Ping, Armor, Coordinates, Compass, Keystrokes, CPS, Target HUD, etc.
+          - **World** (7): Particles, Time Changer, Custom Sky, Ambient Particles, Waypoints, etc.
+          - **Player** (6): Zoom, Freelook, No Bob, No Hurt Cam, Spin Visual, Cape
+          - **Misc** (4): Animations, Screen FX, TNT Timer, Item Model
           
           ### Install:
-          1. Install Fabric Loader for 1.20.1
-          2. Install Fabric API
-          3. Put JAR in mods folder
-          4. Press **Right Shift** in game
+          1. Fabric Loader + Fabric API for 1.20.1
+          2. Put JAR in mods folder
+          3. Press **Right Shift** in game
         files: |
+          AlpineVisuals-2.0.0.jar
           build/libs/*.jar
-          AlpineVisuals-1.0.0.jar
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
